--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ version '1.0-SNAPSHOT'
 
 jar {
     enabled(true)
+    destinationDir new File("./build/libs")
     manifest {
         attributes("Main-Class": "Main")
     }
